# opinion-dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  graph_test.cpp  main.cpp
algorithms/: traversal.h
configs/: config.json
data/: graph.json
data/configs/: config.json
data_structures/: graph.h
glad/include/glad/: glad.h
res/GIMP/: MS_Gothic.xcf  Untitled.xcf  line.xcf
res/font/: MS_GOTHIC_DATA.csv
src/: camera.h  glad.c  globals.h  main.cpp  random.h  types.h  utils.h
src/algorithms/: generate_graph.h  poisson_disk_sampler.h  traversal.h
src/core/: configs.h  entity_manager.h
src/data_structures/: graph.h  matrix.h
src/dynamics/: utils.h
src/dynamics/models/: sznajd.h  voter_model.h
src/media/: audio.h  graphics.h
src/media/shaders/: frag.glsl  vertex.glsl
src/media/shaders/font/: frag.glsl  vertex.glsl
src/media/shaders/graph/: frag.glsl
src/media/shaders/test/: frag.glsl  vertex.glsl
src/models/: voter_model.h
src/tests/: entity_manager_test.cpp  graph_deserialization_test.cpp  graph_serialization_test.cpp  graph_test.cpp  matrix_test.cpp  poisson_disk_test.cpp  run_tests.cpp  sznajd_model_test.cpp  voter_model_test.cpp
